# aoi

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  handler.rs  main.rs
cursory/: Cargo.toml
cursory/src/: main.rs  message.rs  player.rs  player_handler.rs  player_proto_handler.rs  server.rs  world.rs  world_handler.rs  world_proto_handler.rs
grid/: Cargo.toml
grid/src/: event.rs  grid.rs  main.rs  message.rs  player.rs  player_handler.rs  server.rs  tick.rs  world.rs  world_handler.rs
protocol/: Cargo.toml  build.rs
protocol/src/: codec.rs  lib.rs  mapper.rs
protocol/src/proto/: cs_msg.proto  sc_msg.proto  test.proto
ui/: Cargo.toml
ui/src/: main.rs
