[package]
name = "cursory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
protobuf = "3.2.0"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.25"
log = "0.4.17"
env_logger = "0.9.1"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio_kcp = "0.9.3"